# ExFastAPI

./: .gitignore  README.md  create_tables.py  main.py  pyproject.toml  requirements.txt  settings_db.py  setup.cfg  test_database.sqlite
src/: settings.py
src/db/: session.py  settings.py
src/invoices/: models.py  routers.py  schemas.py
src/invoices/routers/: version_1.py
src/models/: invoices.py  users.py
src/routers/v1/: auth.py  invoices.py  settings.py  users.py
src/schemas/: invoices.py  users.py
src/templates/: products_list.html
src/users/: models.py  routers.py  schemas.py
src/users/routers/: version_1.py
src/users/routers/version_1/: users.py
tests/: conftest.py  test_db.py  test_foo.py  test_models.py  test_utils.py  utils.py
tests/test_invoices/: test_models.py
tests/test_models/: test_invoices.py  test_users.py
tests/test_routers/: test_auth.py  test_invoices.py  test_users.py
tests/test_users/: test_database.sqlite  test_routers.py
user/: crud.py  models.py  schemas.py
users/: models.py  routers.py
